[gd_scene load_steps=9 format=3 uid="uid://br70m6u84hw2k"]

[ext_resource type="PackedScene" uid="uid://4h06f4kdl3ky" path="res://scenes/enemy/cone.tscn" id="2_iu1bj"]
[ext_resource type="Script" uid="uid://bkdwd4kp5iskt" path="res://scripts/fish_person.gd" id="3_iu1bj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v24tm"]
radius = 0.57958984

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jouek"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v24tm"]

[sub_resource type="SphereMesh" id="SphereMesh_jwxsq"]
radius = 0.3
height = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hrntt"]
albedo_color = Color(0.9764706, 0.101960786, 0, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_be0k6"]
data = PackedVector3Array(0, -1, -1, 0.1951, -1, -0.9808, 0, 1, 0, 0.1951, -1, -0.9808, 0.3827, -1, -0.92389995, 0, 1, 0, 0.3827, -1, -0.92389995, 0.5556, -1, -0.8315, 0, 1, 0, 0.5556, -1, -0.8315, 0.7071, -1, -0.7071, 0, 1, 0, 0.7071, -1, -0.7071, 0.8314, -1, -0.5556, 0, 1, 0, 0.8314, -1, -0.5556, 0.92389995, -1, -0.3827, 0, 1, 0, 0.92389995, -1, -0.3827, 0.9808, -1, -0.1951, 0, 1, 0, 0.9808, -1, -0.1951, 1, -1, 0, 0, 1, 0, 1, -1, 0, 0.9808, -1, 0.1951, 0, 1, 0, 0.9808, -1, 0.1951, 0.92389995, -1, 0.3827, 0, 1, 0, 0.92389995, -1, 0.3827, 0.8314, -1, 0.5556, 0, 1, 0, 0.8314, -1, 0.5556, 0.7071, -1, 0.7071, 0, 1, 0, 0.7071, -1, 0.7071, 0.5556, -1, 0.8314, 0, 1, 0, 0.5556, -1, 0.8314, 0.3827, -1, 0.92389995, 0, 1, 0, 0.3827, -1, 0.92389995, 0.1951, -1, 0.9808, 0, 1, 0, 0.1951, -1, 0.9808, 0, -1, 1, 0, 1, 0, 0, -1, 1, -0.1951, -1, 0.9808, 0, 1, 0, -0.1951, -1, 0.9808, -0.3827, -1, 0.92389995, 0, 1, 0, -0.3827, -1, 0.92389995, -0.5556, -1, 0.8314, 0, 1, 0, -0.5556, -1, 0.8314, -0.7071, -1, 0.7071, 0, 1, 0, -0.7071, -1, 0.7071, -0.8315, -1, 0.5556, 0, 1, 0, -0.8315, -1, 0.5556, -0.92389995, -1, 0.3827, 0, 1, 0, -0.92389995, -1, 0.3827, -0.9808, -1, 0.1951, 0, 1, 0, -0.9808, -1, 0.1951, -1, -1, 0, 0, 1, 0, -1, -1, 0, -0.9808, -1, -0.1951, 0, 1, 0, -0.9808, -1, -0.1951, -0.92389995, -1, -0.3827, 0, 1, 0, -0.92389995, -1, -0.3827, -0.8315, -1, -0.5556, 0, 1, 0, -0.8315, -1, -0.5556, -0.7071, -1, -0.7071, 0, 1, 0, -0.7071, -1, -0.7071, -0.5556, -1, -0.8315, 0, 1, 0, -0.5556, -1, -0.8315, -0.3827, -1, -0.92389995, 0, 1, 0, -0.1951, -1, -0.9808, 0.1951, -1, -0.9808, 0, -1, -1, 0.1951, -1, -0.9808, 0.5556, -1, -0.8315, 0.3827, -1, -0.92389995, -0.1951, -1, -0.9808, 0.5556, -1, -0.8315, 0.1951, -1, -0.9808, 0.5556, -1, -0.8315, 0.8314, -1, -0.5556, 0.7071, -1, -0.7071, 0.5556, -1, -0.8315, 0.9808, -1, -0.1951, 0.8314, -1, -0.5556, 0.8314, -1, -0.5556, 0.9808, -1, -0.1951, 0.92389995, -1, -0.3827, -0.1951, -1, -0.9808, 0.9808, -1, -0.1951, 0.5556, -1, -0.8315, 0.9808, -1, -0.1951, 0.9808, -1, 0.1951, 1, -1, 0, 0.9808, -1, -0.1951, 0.8314, -1, 0.5556, 0.9808, -1, 0.1951, 0.9808, -1, 0.1951, 0.8314, -1, 0.5556, 0.92389995, -1, 0.3827, 0.9808, -1, -0.1951, 0.1951, -1, 0.9808, 0.8314, -1, 0.5556, -0.1951, -1, -0.9808, 0.1951, -1, 0.9808, 0.9808, -1, -0.1951, 0.8314, -1, 0.5556, 0.5556, -1, 0.8314, 0.7071, -1, 0.7071, 0.8314, -1, 0.5556, 0.1951, -1, 0.9808, 0.5556, -1, 0.8314, 0.5556, -1, 0.8314, 0.1951, -1, 0.9808, 0.3827, -1, 0.92389995, 0.1951, -1, 0.9808, -0.1951, -1, 0.9808, 0, -1, 1, 0.1951, -1, 0.9808, -0.5556, -1, 0.8314, -0.1951, -1, 0.9808, -0.1951, -1, 0.9808, -0.5556, -1, 0.8314, -0.3827, -1, 0.92389995, 0.1951, -1, 0.9808, -0.1951, -1, -0.9808, -0.9808, -1, 0.1951, 0.1951, -1, 0.9808, -0.9808, -1, 0.1951, -0.5556, -1, 0.8314, -0.5556, -1, 0.8314, -0.8315, -1, 0.5556, -0.7071, -1, 0.7071, -0.5556, -1, 0.8314, -0.9808, -1, 0.1951, -0.8315, -1, 0.5556, -0.8315, -1, 0.5556, -0.9808, -1, 0.1951, -0.92389995, -1, 0.3827, -0.5556, -1, -0.8315, -0.1951, -1, -0.9808, -0.3827, -1, -0.92389995, -0.8315, -1, -0.5556, -0.1951, -1, -0.9808, -0.5556, -1, -0.8315, -0.9808, -1, 0.1951, -0.1951, -1, -0.9808, -0.8315, -1, -0.5556, -0.8315, -1, -0.5556, -0.5556, -1, -0.8315, -0.7071, -1, -0.7071, -0.9808, -1, 0.1951, -0.8315, -1, -0.5556, -0.9808, -1, -0.1951, -0.9808, -1, -0.1951, -0.8315, -1, -0.5556, -0.92389995, -1, -0.3827, -0.9808, -1, 0.1951, -0.9808, -1, -0.1951, -1, -1, 0, -0.3827, -1, -0.92389995, -0.1951, -1, -0.9808, 0, 1, 0, -0.1951, -1, -0.9808, 0, -1, -1, 0, 1, 0)

[node name="CharacterBody3D" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("3_iu1bj")

[node name="enemy_hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1.0000001, 0, 0, 5.9604645e-08)
shape = SubResource("CapsuleShape3D_v24tm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_jouek")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_v24tm")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5635598, 0, 0, 0, 1.2240598, 0, 0, 0, 0.33799785, 0, 0.5478558, -0.5584391)
mesh = SubResource("SphereMesh_jwxsq")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_hrntt")

[node name="VisionArea" type="Area3D" parent="."]
collision_layer = 0

[node name="Cone" parent="VisionArea" instance=ExtResource("2_iu1bj")]
transform = Transform3D(5, 0, 0, 0, -2.1855695e-07, -3.1232774, 0, 5, -1.365228e-07, 0, 0.54404783, -5.6607876)
visible = false
layers = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(5, 0, 0, 0, -2.1855695e-07, -5, 0, 5, -2.1855695e-07, 0, 0.54404783, -5.6607876)
shape = SubResource("ConcavePolygonShape3D_be0k6")

[node name="VisionTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="VisionRaycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.033954978, 0, 0, 0, 0.10827249, 0, 0.55166394, 0)
target_position = Vector3(0, -1, -100)
collision_mask = 3
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="FishPerson" type="Node3D" parent="."]

[connection signal="body_shape_exited" from="VisionArea" to="." method="_on_vision_area_body_shape_exited"]
[connection signal="timeout" from="VisionTimer" to="." method="_on_vision_timer_timeout"]
[connection signal="timeout" from="VisionTimer" to="FishPerson" method="_on_vision_timer_timeout"]
